--- a/index.html
+++ b/index.html
@@ -3,45 +3,52 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#ffffff"/>
-  <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="style.css" />
   <title>LPG Converter</title>
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#bbbbbb" />
+  <link rel="icon" href="icons/icon-192.png" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h1>LPG Converter</h1>
   <div class="tabs">
-    <button onclick="showTab('propane')">Propano</button>
-    <button onclick="showTab('butane')">Butano</button>
-    <button onclick="showTab('average')">Media Ponderata</button>
+    <button onclick="showTab('propano')">Propano</button>
+    <button onclick="showTab('butano')">Butano</button>
+    <button onclick="showTab('media')">Media Ponderata</button>
   </div>
 
-  <div id="propane" class="tab">
+  <div id="propano" class="tab active">
     <h2>Propano</h2>
-    <label>Inserisci tonnellate:</label>
-    <input id="tons-propane" type="number" step="any" />
-    <button onclick="convertPropane()">Converti</button>
-    <p id="result-propane"></p>
+    <label>Tonnellate:</label>
+    <input type="number" id="tonPropano" oninput="convertPropano()" />
+    <p>Barili: <span id="bariliPropano">0</span></p>
   </div>
 
-  <div id="butane" class="tab" style="display:none">
+  <div id="butano" class="tab">
     <h2>Butano</h2>
-    <label>Inserisci tonnellate:</label>
-    <input id="tons-butane" type="number" step="any" />
-    <button onclick="convertButane()">Converti</button>
-    <p id="result-butane"></p>
+    <label>Tonnellate:</label>
+    <input type="number" id="tonButano" oninput="convertButano()" />
+    <p>Barili: <span id="bariliButano">0</span></p>
   </div>
 
-  <div id="average" class="tab" style="display:none">
+  <div id="media" class="tab">
     <h2>Media Ponderata</h2>
-    <label>Quantità Propano (ton):</label>
-    <input id="qt-propane" type="number" step="any" /><br/>
-    <label>Quantità Butano (ton):</label>
-    <input id="qt-butane" type="number" step="any" /><br/>
-    <button onclick="calculateWeightedAverage()">Calcola</button>
-    <p id="result-average"></p>
+    <label>Propano (%):</label>
+    <input type="number" id="percPropano" oninput="calcolaMedia()" />
+    <label>Butano (%):</label>
+    <input type="number" id="percButano" oninput="calcolaMedia()" />
+    <p>PM Medio: <span id="pmMedio">0</span></p>
+    <label>Tonnellate:</label>
+    <input type="number" id="tonMedia" oninput="calcolaMedia()" />
+    <p>Barili: <span id="bariliMedia">0</span></p>
   </div>
 
   <script src="script.js"></script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js')
+        .then(() => console.log('Service worker registrato'))
+        .catch(err => console.error('Errore nel Service Worker:', err));
+    }
+  </script>
 </body>
 </html>
